src/test/resources/private/typechecking/pass/return/pass03.jova
class Helper {
    public int a;
    private int b;

    public int getB() {
        return b + a;
    }
}

class B {
    public Helper getHelper(){
        Helper a;
        a = new Helper;
        return a;
    }
}

class A {

  private int get3() {
    return 3;
  }

  public int func() {
    int foo;
    Helper helper;
    B b;

    foo = 3;
    b = new B;


    return foo + 4 + b.getHelper().a * 15 * (16 - 23 - helper.getB()) / get3() + b.getHelper().getB();
  }
}
